# vagrant-k8s-lab

./: .ansible-lint  .editorconfig  .gitignore  LICENSE  Makefile  README.md  Vagrantfile  ansible.cfg  pyproject.toml
ansible/: inventory.yml  provision.yml  requirements.yml
ansible/playbooks/bootstrap/: main.yml
ansible/playbooks/k8s/: control_plane.yml  main.yml  validate.yml  vars.yml  worker_nodes.yml
